# WSYNC-Web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  COPYING.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  KEYBOARD_SHORTCUTS.md  LICENSE  README.md  SEO_GUIDE.md  TECHNICAL_NOTES.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: file_storage.py  vtt_parser.py
static/: app.js  index.html  robots.txt  sitemap.xml  style.css
tests/: README.md  __init__.py  conftest.py  test_integration.py
